fix Safari overflow issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -176,7 +176,7 @@ body {
       overflow:hidden;
       position:relative;
       display:none;
-      transform: translateZ(0); //fixes overflow bug
+      -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC); //fixes overflow bug
       
       img {
         max-width:none;
